<resources>

    <string name="app_name">BatteryAlarmGold</string>

    <!-- Battery Temperature. -->
    <string name="temperature">Temperature</string>
    <string name="degree_celsius">°C</string>
    <string name="degree_fahrenheit">°F</string>

    <!-- Battery Voltage. -->
    <string name="voltage">Voltage</string>
    <string name="volts">V</string>
    <string name="milli_volts">mV</string>

    <!-- Technology. -->
    <string name="technology">Technology</string>

    <!-- Battery Status. -->
    <string name="status">Status</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="full">Full</string>
    <string name="not_charging">Not Charging</string>

    <!-- Battery Plugged. -->
    <string name="plugged">Plugged</string>
    <string name="plugged_ac">Ac</string>
    <string name="plugged_usb">Usb</string>
    <string name="plugged_wireless">Wireless</string>
    <string name="plugged_not_plugged">Not Plugged</string>

    <!-- Battery Health. -->
    <string name="health">Health</string>
    <string name="health_cold">Cold</string>
    <string name="health_dead">Dead</string>
    <string name="health_good">Good</string>
    <string name="health_overheat">Overheat</string>
    <string name="health_over_voltage">Over Voltage</string>
    <string name="health_failure">Failure</string>

    <string name="msg_unknown">Unknown</string>

    <string name="alarm_off">Off</string>
    <string name="alarm_on">On</string>

</resources>